<resources>
    <string name="app_name">DilyorbekMukhiddinovE01</string>

    <string name="textView_contador">CONTADOR</string>
    <string name="textView_login">LOGIN</string>
    <string name="textView_numero">0</string>
    <string name="textView_author">By_Dilyorbek_Mukhiddinov</string>
    <string name="textView_verific">Login correcto</string>
    <string name="textView_password">Contraseña</string>
    <string name="textView_username">Nombre</string>
    <string name="textView_home">Hola Mundo</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_reset">RESET</string>
    <string name="button_login">LOGIN</string>
    <string name="button_fragment1">HOME</string>
    <string name="button_fragment2">CONTADOR</string>
    <string name="button_fragment3">EXIT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>